[package]
name = "amplification_circuit"
version = "0.1.0"
authors = ["Niklas Mohrin <niklas.mohrin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
intcode_computer = { path = "../intcode_computer" }
