[package]
name = "ascii_controller"
version = "0.1.0"
authors = ["Niklas Mohrin <niklas.mohrin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode_computer = { path = "../intcode_computer" }
intcode_channel_io = { path = "../intcode_channel_io" }
